--- a/src/client/wf_dmg_calc.html
+++ b/src/client/wf_dmg_calc.html
@@ -373,12 +373,14 @@
                 <div class="section-title">4. Enemy Data</div>
                 <div class="input-group">
                     <label>Faction</label>
+                    <select id="enemy-faction">
+                        <option value="none">None</option>
+                    </select>
+                </div>
+                <div class="input-group">
+                    <label>Type</label>
                     <select id="enemy-type">
-                        <option value="grineer">Grineer</option>
-                        <option value="corpus">Corpus</option>
-                        <option value="infested">Infested</option>
-                        <option value="corrupted">Corrupted</option>
-                        <option value="sentient">Sentient</option>
+                        <option value="none">None</option>
                     </select>
                 </div>
                 <div class="input-group">
@@ -423,17 +425,35 @@
             const searchResults = document.getElementById('mod-search-results');
 
             function loadEnemyTypes() {
+                // Load enemy factions
+                fetch('/api/enemy-factions')
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data.success) {
+                            const factionSelect = document.getElementById('enemy-faction');
+                            factionSelect.innerHTML = '';
+                            data.enemy_factions.forEach(faction => {
+                                const option = document.createElement('option');
+                                option.value = faction;
+                                option.textContent = faction.charAt(0).toUpperCase() + faction.slice(1);
+                                factionSelect.appendChild(option);
+                            });
+                        }
+                    })
+                    .catch(error => console.error('Load enemy factions failed:', error));
+
+                // Load enemy types
                 fetch('/api/enemy-types')
                     .then(response => response.json())
                     .then(data => {
                         if (data.success) {
-                            const enemySelect = document.getElementById('enemy-type');
-                            enemySelect.innerHTML = '';
+                            const typeSelect = document.getElementById('enemy-type');
+                            typeSelect.innerHTML = '';
                             data.enemy_types.forEach(type => {
                                 const option = document.createElement('option');
                                 option.value = type;
                                 option.textContent = type.charAt(0).toUpperCase() + type.slice(1);
-                                enemySelect.appendChild(option);
+                                typeSelect.appendChild(option);
                             });
                         }
                     })
@@ -591,7 +611,8 @@
                 });
 
                 const enemyConfig = {
-                    faction: document.getElementById('enemy-type').value
+                    faction: document.getElementById('enemy-faction').value,
+                    type: document.getElementById('enemy-type').value
                 };
 
                 const inGameBuffs = {
